fix: adjust searchbar alignment

--- a/src/styles/searchbar.css
+++ b/src/styles/searchbar.css
@@ -4,7 +4,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-grow: 1;
-  padding: .3em .8em .3em 2.5em;
+  padding: .3em .8em .3em .7em;
   box-sizing: border-box;
   position: relative;
 }
